lucet-validate: better api to witx crate is in a branch

--- a/lucet-validate/Cargo.toml
+++ b/lucet-validate/Cargo.toml
@@ -19,6 +19,6 @@ path = "src/main.rs"
 [dependencies]
 clap = "2"
 failure = "0.1"
-witx = "0.1"
+witx = { git = "https://github.com/webassembly/wasi", branch = "pch/witx_better_api" }
 cranelift-entity = { path = "../cranelift/cranelift-entity", version = "0.43.1" }
 wasmparser = { git = "https://github.com/pchickey/wasmparser.rs", branch = "pch/correct_section_content_api" }
